  lcl3.0, and excl.

o The lcl3.0 io code has been sped up a bit by using read-array instead of
  fast-read-byte.

o READ-RESOURCES now handles any lines that start with # and don't start with
  #include as comments.

R4.4 changes:

o Fixed typo in DEFAULT-KEYSYM-TRANSLATE.

o In events, CurrentTime (encoded as 0 in the protocol) decodes to NIL instead 
  of 0.

o NIL now translates to and from the atom-id of 0.

o A new variable *OUTPUT-BUFFER-SIZE* has been introduced, with value 8192.
  Now, instead of the buffer creating code always creating output buffers of 
  length 8192 bytes, they create output buffers of length *OUTPUT-BUFFER-SIZE* 
  bytes.

o GCONTEXT-CACHE-P, COLORMAP-PLIST and CURSOR-PLIST have been exported.

o If CREATE-GCONTEXT is given a rect-seq as a clip-mask, then a
  SetClipRectangles request must be sent to initialize the clip-mask.  The logic
  to do this is located in FORCE-GCONTEXT-CHANGES-INTERNAL, but this wasn't
  being called because create-gcontext always forces local/server-state
  timestamps equal.  Same problem for dash lists.  CREATE-GCONTEXT has been
  fixed so that in these cases it makes the timestamps unequal so that
  FORCE-GCONTEXT-CHANGES-INTERNAL is called.

o ANGLEP type check sped up for excl.  Arc drawing should be lots faster.

o RATIONAL type definition for kcl now takes the correct optional args.

o (SETF FONT-PATH) changed to return the value

o Fixed typo in the hex parsing in READ-BITMAP-FILE

o Made READ-RESOURCES more robust about weird resource files.

o New variable *DEF-CLX-CLASS-USE-DEFCLASS*, which controls whether DEF-CLX-CLASS
  uses DEFCLASS.  If it is a list, it is interpreted by DEF-CLX-CLASS to be a list
  of type names for which DEFCLASS should be used.  If it is not a list, DEFCLASS
  is always used.  IF it is NIL, DEFCLASS is never used, since NIL is the empty
  list.  By default, it's T in Genera, NIL otherwise.

o Fixed typo in DEFINE-CONDITION for #-(or lispm clx-ansi-common-lisp excl lcl3.0).
