@@ -426,7 +426,11 @@
 (defun merge-resources (database with-database)
   (declare (type resource-database database with-database))
   (declare (values resource-database))
-  (map-resource #'add-resource database with-database)
+  (map-resource
+    database
+    #'(lambda (name value database)
+	(add-resource database name value))
+    with-database)
   with-database)
 
 (defun char-memq (key char)
